# Multicore-DAG-Schedule

./: .bazelrc  .gitignore  ALGORITHMS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  gen_compile_commands.py
docs/: algorithms.md  quickstart.md
include/algorithms/: dag_generator.h  graham_response_time_analysis.h  minimum_core_algorithm.h  node_priority_assignment_algorithm.h
include/dag/: dag_graph.h  task_node.h
include/io/: stg_reader.h
include/utils/: json_utils.h
scripts/: plot_comparison.py  plot_cores_comparison.py  run_pipeline.sh
src/: compare_cores_main.cpp  compare_main.cpp  dag_graph.cc  dag_graph.cpp  main.cc  main.cpp  terminal_app.cpp
src/algorithms/: dag_generator.cpp  graham_response_time_analysis.cpp  minimum_core_algorithm.cpp  node_priority_assignment_algorithm.cpp
src/io/: stg_reader.cpp
stg/2500/: rand0003.stg  rand0004.stg
tests/: dag_graph_test.cc  dag_graph_test.cpp
