load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "dag_core",
    hdrs = [
        "include/dag/dag_graph.h",
        "include/dag/task_node.h",
    ],
    srcs = [
        "src/dag_graph.cpp",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "node_priority_assignment_algorithm",
    hdrs = ["include/algorithms/node_priority_assignment_algorithm.h"],
    srcs = ["src/algorithms/node_priority_assignment_algorithm.cpp"],
    includes = ["include"],
    deps = [":dag_core"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "graham_response_time_algorithm",
    hdrs = ["include/algorithms/graham_response_time_analysis.h"],
    srcs = ["src/algorithms/graham_response_time_analysis.cpp"],
    includes = ["include"],
    deps = [":dag_core"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "json_utils",
    hdrs = ["include/utils/json_utils.h"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dag_generator",
    hdrs = ["include/algorithms/dag_generator.h"],
    srcs = ["src/algorithms/dag_generator.cpp"],
    includes = ["include"],
    deps = [
        ":dag_core",
        ":stg_reader",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "stg_reader",
    hdrs = ["include/io/stg_reader.h"],
    srcs = ["src/io/stg_reader.cpp"],
    includes = ["include"],
    deps = [":dag_core"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "minimum_core_algorithm",
    hdrs = ["include/algorithms/minimum_core_algorithm.h"],
    srcs = ["src/algorithms/minimum_core_algorithm.cpp"],
    includes = ["include"],
    deps = [
        ":dag_core",
        ":node_priority_assignment_algorithm",
        ":graham_response_time_algorithm",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "dag_scheduler_compare",
    srcs = ["src/compare_main.cpp"],
    deps = [
        ":dag_core",
        ":node_priority_assignment_algorithm",
        ":graham_response_time_algorithm",
        ":dag_generator",
        ":json_utils",
        ":stg_reader",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "dag_cores_compare",
    srcs = ["src/compare_cores_main.cpp"],
    deps = [
        ":dag_core",
        ":node_priority_assignment_algorithm",
        ":graham_response_time_algorithm",
        ":dag_generator",
        ":json_utils",
        ":minimum_core_algorithm",
        ":stg_reader",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "dag_scheduler_app",
    srcs = ["src/main.cpp"],
    deps = [
        ":node_priority_assignment_algorithm",
        ":graham_response_time_algorithm",
        ":dag_core",
        ":dag_generator",
        ":stg_reader",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "dag_terminal",
    srcs = ["src/terminal_app.cpp"],
    deps = [
        ":dag_core",
        ":node_priority_assignment_algorithm",
        ":graham_response_time_algorithm",
        ":dag_generator",
        ":json_utils",
        ":minimum_core_algorithm",
        ":stg_reader",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "dag_graph_test",
    srcs = ["tests/dag_graph_test.cpp"],
    deps = [
        ":node_priority_assignment_algorithm",
        ":graham_response_time_algorithm",
        ":minimum_core_algorithm",
        ":dag_core",
    ],
)
